# inventory-transportation-management-system

./: CMakeLists.txt  LICENSE.txt  README.md
data/: Config.cpp  Config.h
data/options/: suppliers.txt  transactions.txt  transporters.txt
data/records/: chain.txt  participants.txt
libs/sha384/: sha384.cpp  sha384.h
libs/sha512/: sha512.cpp
src/: Application.cpp  Application.h  main.cpp
src/authentication/: Login.cpp  Login.h  Participant.cpp  Participant.h
src/blockchain/: Block.cpp  Block.h  BlockHeader.cpp  BlockHeader.h  Chain.cpp  Chain.h  SupplierBlock.cpp  SupplierBlock.h  TransactionBlock.cpp  TransactionBlock.h  TransporterBlock.cpp  TransporterBlock.h
src/blockchain/enums/: BlockAttribute.cpp  BlockAttribute.h  BlockType.cpp  BlockType.h  HashAlgorithm.h
src/collection/: InputCollector.cpp  InputCollector.h
src/collection/conversion/: DataConverter.cpp  DataConverter.h
src/collection/validator/: InputValidator.cpp  InputValidator.h
src/filesystem/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
src/utils/: Datetime.cpp  Datetime.h  Math.cpp  Math.h  Structures.cpp  Structures.h
